# avatar-bot

./: .gitignore  Cargo.toml  build.sh
.github/workflows/: build.yml  docker-builder.yml
builder/: Dockerfile  build.sh
src/: command.rs  convert.rs  error.rs  ffmpeg.rs  image.rs  main.rs  opencv.rs  opengraph.rs  video.rs
