[package]
name = "avatar-bot"
authors = ["南浦月 <nanpuyue@gmail.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
image = "0.25.1"
imageproc = "0.24.0"
lazy_static = "1.4.0"
opencv = { version = "0.89.0", default-features = false, features = ["clang-runtime", "imgcodecs", "objdetect"] }
reqwest = "0.12.3"
rlottie = "0.5.2"
rsmpeg = "0.14.2"
grammers-client = { version = "0.5.0", features = ["unstable_raw"] }
grammers-tl-types = "0.5.1"
grammers-session = "0.5.1"
tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
webpage = { version = "2.0.0", default-features = false }
